--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-/GUI/nbproject/private/
-/GUI/build/
+/UI/nbproject/private/
+/UI/build/
+/src/UI/UI/nbproject/private/
+/src/UI/UI/build/
+/GUI/UI/nbproject/private/
+/GUI/UI/build/
